--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "gsap": "^3.9.1",
     "node-sass": "^7.0.1",
     "sass": "^1.48.0"
   }
